minor html and css modifications

--- a/Template/index.html
+++ b/Template/index.html
@@ -5,6 +5,7 @@
 	<title>BuckIt Up</title>
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="layout.css">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
 	<script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="main.js"></script>
@@ -25,9 +26,10 @@
 	</div>
 	<div class="hero">
 		<div class="carousel">
-			<div></div>
-			<div></div>
-			<div></div>
+
+			<div class="carousel1"></div>
+			<div class="carousel2"></div>
+			<div class="carousel3"></div>
 		</div>
 		<div>
 			<h1>Your Dreams Await ...Turn Them Into Reality.</h1>
@@ -36,7 +38,7 @@
 				<button class="login" type="submit">Login</button>		
 			</div>
 			<div class="inspire">
-				<span>Inspiring Quote</span>
+				<span>Insert Inspiring Quote Here</span>
 			</div>
 		</div>
 	</div>
@@ -44,7 +46,7 @@
 		<footer>
 			<div>
 				<a href="#">Twitter</a>
-				<a href="#">Facebook</a>
+				<a href="#"><i class="fa fa-facebook-official fa-3x"></i></a>
 				<a href="#">Instagram</a>
 				<a href="#">Flickr</a>
 				<a href="#">Tumblr</a>
@@ -56,8 +58,9 @@
 		
 	</div>
 
-	<div class="content">
-		
+	<div class="main-content">
+		<div class="media"></div>
+		<div class="content"></div>
 	</div>
 	
 		
