added social media icons and adjusted nav and footer heights

--- a/Template/index.html
+++ b/Template/index.html
@@ -45,11 +45,11 @@
 	<div class="main-footer">
 		<footer>
 			<div>
-				<a href="#">Twitter</a>
+				<a href="#"><i class="fa fa-twitter-square fa-3x"></i></a>
 				<a href="#"><i class="fa fa-facebook-official fa-3x"></i></a>
-				<a href="#">Instagram</a>
-				<a href="#">Flickr</a>
-				<a href="#">Tumblr</a>
+				<a href="#"><i class="fa fa-instagram fa-3x"></i></a>
+				<a href="#"><i class="fa fa-flickr fa-3x"></i></a>
+				<a href="#"><i class="fa fa-tumblr-square fa-3x"></i></a>
 			</div>
 		</footer>
 	</div>
