--- a/Template/index.html
+++ b/Template/index.html
@@ -26,10 +26,9 @@
 	</div>
 	<div class="hero">
 		<div class="carousel">
-
-			<div class="carousel1"></div>
-			<div class="carousel2"></div>
-			<div class="carousel3"></div>
+			<div class="c1"></div>
+			<div class="c2"></div>
+			<div class="c3"></div>
 		</div>
 		<div>
 			<h1>Your Dreams Await ...Turn Them Into Reality.</h1>
@@ -59,8 +58,13 @@
 	</div>
 
 	<div class="main-content">
-		<div class="media"></div>
-		<div class="content"></div>
+		<div class="main-media"></div>
+		<div class="main-description">
+			<h3>This is how we do it ...</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, mollitia. 
+			Obcaecati repellat earum quaerat dolorem, dolore iure nobis eaque, omnis corporis. 
+			Sapiente eos asperiores consectetur quidem cupiditate magnam voluptates, commodi!</p>
+		</div>
 	</div>
 	
 		
