changes  on the main-content section

--- a/Template/index.html
+++ b/Template/index.html
@@ -64,6 +64,15 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, mollitia. 
 			Obcaecati repellat earum quaerat dolorem, dolore iure nobis eaque, omnis corporis. 
 			Sapiente eos asperiores consectetur quidem cupiditate magnam voluptates, commodi!</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, mollitia. 
+			Obcaecati repellat earum quaerat dolorem, dolore iure nobis eaque, omnis corporis. 
+			Sapiente eos asperiores consectetur quidem cupiditate magnam voluptates, commodi!</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, mollitia. 
+			Obcaecati repellat earum quaerat dolorem, dolore iure nobis eaque, omnis corporis. 
+			Sapiente eos asperiores consectetur quidem cupiditate magnam voluptates, commodi!</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, mollitia. 
+			Obcaecati repellat earum quaerat dolorem, dolore iure nobis eaque, omnis corporis. 
+			Sapiente eos asperiores consectetur quidem cupiditate magnam voluptates, commodi!</p>
 		</div>
 	</div>
 	
