--- a/Template/layout.css
+++ b/Template/layout.css
@@ -195,6 +195,7 @@ CONTENT
 	background-size: cover;
 	background-color: blue;
 	margin-top: 3%;
+	margin-left: 30px;
 	height: 80%;
 	width: 40%;
 	float: left;
