--- a/Template/index.html
+++ b/Template/index.html
@@ -4,12 +4,16 @@
 	<meta charset="UTF-8">
 	<title>BuckIt Up</title>
 	<link rel="stylesheet" href="normalize.css">
-	<link rel="stylesheet" href="layout.css">
+	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Poiret+One' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  	<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
-	<script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-	<script src="main.js"></script>
-	<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js"></script>
+	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="slick/slick.min.js"></script>
+	<script type="text/javascript" src="main.js"></script>
+
 </head>
 <body>
 	<div class="header">	
@@ -26,9 +30,11 @@
 	</div>
 	<div class="hero">
 		<div class="carousel">
-			<div class="c1"></div>
-			<div class="c2"></div>
-			<div class="c3"></div>
+			<div><img src="images/auroraborealis.jpg"  alt=""></div>
+			<div><img src="images/rio.jpg" alt=""></div>
+			<div><img src="images/greatwall.jpg"  alt=""></div>
+			<div><img src="images/russia.jpg"  alt=""></div>
+			<div><img src="images/africa.jpg"  alt=""></div>
 		</div>
 		<div>
 			<h1>Your Dreams Await ...Turn Them Into Reality.</h1>
@@ -47,13 +53,13 @@
 				<a href="#"><i class="fa fa-twitter-square fa-3x"></i></a>
 				<a href="#"><i class="fa fa-facebook-official fa-3x"></i></a>
 				<a href="#"><i class="fa fa-instagram fa-3x"></i></a>
-				<a href="#"><i class="fa fa-flickr fa-3x"></i></a>
+				<a href="#"><i class="fa fa-pinterest-square fa-3x"></i></i></a>
 				<a href="#"><i class="fa fa-tumblr-square fa-3x"></i></a>
 			</div>
 		</footer>
 	</div>
 
-	<div class="coverflow">
+<!-- 	<div class="coverflow">
 		
 	</div>
 
@@ -74,7 +80,7 @@
 			Obcaecati repellat earum quaerat dolorem, dolore iure nobis eaque, omnis corporis. 
 			Sapiente eos asperiores consectetur quidem cupiditate magnam voluptates, commodi!</p>
 		</div>
-	</div>
+	</div> -->
 	
 		
 	  
