--- a/Template/styles.css
+++ b/Template/styles.css
@@ -4,7 +4,7 @@ RESET
 
 html {
 	box-sizing: border-box;
-	font-family: "Myriad Set Pro";
+	font-family: "Droid Sans";
 }
 
 *, *:before, *:after {
@@ -16,8 +16,9 @@ HEADER
 *****************************************************************/
 
 .header {
-	background-color: green;
+	background-color: #606060;
 	height: 80px;
+	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.4);
 	position: fixed;
 	top: 0;
 	right: 0;
@@ -37,28 +38,33 @@ header nav {
 }
 
 header nav a {
-	color: black;
+	color: white;
 	text-decoration: none;
 	display: inline-block;
 }
 
 nav .logo, .settings, .logout {
+	font-size: 1.2em;
 	padding: 20px 10px;
 	position: absolute;
 	top: 10px;
 }
 
 nav .logo {
+	font-family: "Poiret One";
+	font-size: 3em;
+	padding: 0 10px;
 	left: 10px;
 }
 
 nav .main {
+	font-size: 1.2em;
 	padding: 20px 10px;
 	margin-top: 10px;
 }
 
 nav .settings {
-	padding: 20px 20px;
+	padding: 20px 30px;
 	right: 61px;
 }
 
@@ -71,14 +77,14 @@ HERO SECTION
 *****************************************************************/
 
 .hero {
-	/*background-color: yellow;*/
+	background-color: yellow;
 	height: 520px;
 	width: 100%;
 	position: relative;
 	margin-top: 75px;
 }
 
-.carousel img{
+.hero .carousel img {
 	object-fit: cover;
 	height: 520px;
 	width: 100%;
@@ -86,6 +92,7 @@ HERO SECTION
 
 .hero h1 {
 	color: #FFF;
+	text-shadow: 2px 2px #000;
 	position: absolute;
 	top: 60px;
 	width: 100%;
@@ -93,10 +100,9 @@ HERO SECTION
 }
 
 .hero button {
-	background-color: #EA501A;
 	color: #FFF;
 	font-size: 1em;
-	width: 85px;
+	width: 105px;
 	padding: 15px 0;
 	border: none;
 	border-radius: 3px;
@@ -105,17 +111,20 @@ HERO SECTION
 }
 
 .sign-up {
-	left: 47%;
+	background-color: #3B5998;
+	left: 46%;
 	transform: translate(-50%);
 }
 
 .login {
-	right: 47%;
+	background-color: #A7A7A7;
+	right: 46%;
 	transform: translate(50%);
 
 }
 
 .inspire {
+	color: #FFF;
 	position: absolute;
 	bottom: 65px;
 	width: 100%;
@@ -128,7 +137,7 @@ MAIN FOOTER
 *****************************************************************/
 
 .main-footer {
-	background-color: gray;
+	background-color: #F4F4F4;
 	height: 100px;
 }
 
@@ -175,20 +184,19 @@ footer div {
 /****************************************************************
 COVERFLOW
 *****************************************************************/
-.coverflow {
+
+/*.coverflow {
 	background-color: pink;
 	height: 420px;
 	width: 100%;
-}
-
-
+}*/
 
 /****************************************************************
 CONTENT
 *****************************************************************/
 
-.main-content {
-	background-color: lightblue;
+/*.main-content {
+	background-color: #F4F4F4;
 	height: 420px;
 	width: 100%;
 	margin: -20px 0;
@@ -211,7 +219,7 @@ CONTENT
 
 .main-description h3 {
 	padding-top: 40px;
-}
+}*/
 
 
 
