changes to the nav bar

--- a/Template/index.html
+++ b/Template/index.html
@@ -23,8 +23,8 @@
 				<a class="main" href="#">Make List</a>
 				<a class="main" href="#">Find Ideas</a>
 				<a class="main" href="#">About</a>	
-				<a class="settings" href="#">Account</a>				
-				<a class="logout" href="#">Logout</a>				
+				<a class="nav-signup" href="#">Sign Up</a>				
+				<a class="nav-login" href="#">Login</a>				
 			</nav>
 		</header>		
 	</div>
@@ -39,7 +39,7 @@
 		<div>
 			<h1>Your Dreams Await ...Turn Them Into Reality.</h1>
 			<div>
-				<button class="sign-up" type="submit">Sign Up</button>
+				<button class="signup" type="submit">Sign Up</button>
 				<button class="login" type="submit">Login</button>		
 			</div>
 			<div class="inspire">
@@ -58,32 +58,5 @@
 			</div>
 		</footer>
 	</div>
-
-<!-- 	<div class="coverflow">
-		
-	</div>
-
-	<div class="main-content">
-		<div class="main-media"></div>
-		<div class="main-description">
-			<h3>This is how we do it ...</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, mollitia. 
-			Obcaecati repellat earum quaerat dolorem, dolore iure nobis eaque, omnis corporis. 
-			Sapiente eos asperiores consectetur quidem cupiditate magnam voluptates, commodi!</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, mollitia. 
-			Obcaecati repellat earum quaerat dolorem, dolore iure nobis eaque, omnis corporis. 
-			Sapiente eos asperiores consectetur quidem cupiditate magnam voluptates, commodi!</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, mollitia. 
-			Obcaecati repellat earum quaerat dolorem, dolore iure nobis eaque, omnis corporis. 
-			Sapiente eos asperiores consectetur quidem cupiditate magnam voluptates, commodi!</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, mollitia. 
-			Obcaecati repellat earum quaerat dolorem, dolore iure nobis eaque, omnis corporis. 
-			Sapiente eos asperiores consectetur quidem cupiditate magnam voluptates, commodi!</p>
-		</div>
-	</div> -->
-	
-		
-	  
-	
 </body>
 </html>
