--- a/Template/layout.css
+++ b/Template/layout.css
@@ -42,7 +42,7 @@ header nav a {
 	display: inline-block;
 }
 
-nav .logo, .settings, .logout {
+nav .logo, .nav-signup, .nav-login {
 	padding: 20px 10px;
 	position: absolute;
 	top: 10px;
@@ -57,12 +57,12 @@ nav .main {
 	margin-top: 10px;
 }
 
-nav .settings {
+nav .nav-signup {
 	padding: 20px 20px;
 	right: 61px;
 }
 
-nav .logout {
+nav .nav-login {
 	right: 10px;
 }
 
@@ -104,7 +104,7 @@ HERO SECTION
 	bottom: 115px;
 }
 
-.sign-up {
+.signup {
 	left: 47%;
 	transform: translate(-50%);
 }
