--- a/Template/styles.css
+++ b/Template/styles.css
@@ -43,7 +43,7 @@ header nav a {
 	display: inline-block;
 }
 
-nav .logo, .settings, .logout {
+nav .logo, .nav-signup, .nav-login {
 	font-size: 1.2em;
 	padding: 20px 10px;
 	position: absolute;
@@ -63,12 +63,12 @@ nav .main {
 	margin-top: 10px;
 }
 
-nav .settings {
+nav .nav-signup {
 	padding: 20px 30px;
 	right: 61px;
 }
 
-nav .logout {
+nav .nav-login {
 	right: 10px;
 }
 
@@ -78,7 +78,7 @@ HERO SECTION
 
 .hero {
 	background-color: yellow;
-	height: 520px;
+	height: 545px;
 	width: 100%;
 	position: relative;
 	margin-top: 75px;
@@ -86,7 +86,7 @@ HERO SECTION
 
 .hero .carousel img {
 	object-fit: cover;
-	height: 520px;
+	height: 545px;
 	width: 100%;
 }
 
@@ -110,7 +110,7 @@ HERO SECTION
 	bottom: 115px;
 }
 
-.sign-up {
+.signup {
 	background-color: #3B5998;
 	left: 46%;
 	transform: translate(-50%);
