added button functionality to nav bar

--- a/Template/index.html
+++ b/Template/index.html
@@ -22,19 +22,19 @@
 				<a class="logo" href="#">BuckIt Up</a>
 				<a class="main" href="#">Make List</a>
 				<a class="main" href="#">Find Ideas</a>
-				<a class="main" href="#">About</a>	
-				<a class="nav-signup" href="#">Sign Up</a>				
-				<a class="nav-login" href="#">Login</a>				
+				<a class="main" href="#">About</a>					
+				<button class="nav-login" type="submit">Login</button>		
+				<button class="nav-signup" type="submit">Sign Up</button>		
 			</nav>
 		</header>		
 	</div>
 	<div class="hero">
 		<div class="carousel">
-			<div><img src="images/auroraborealis.jpg"  alt=""></div>
+			<div><img src="images/auroraborealis.jpg" alt=""></div>
 			<div><img src="images/rio.jpg" alt=""></div>
-			<div><img src="images/greatwall.jpg"  alt=""></div>
-			<div><img src="images/russia.jpg"  alt=""></div>
-			<div><img src="images/africa.jpg"  alt=""></div>
+			<div><img src="images/greatwall.jpg" alt=""></div>
+			<div><img src="images/russia.jpg" alt=""></div>
+			<div><img src="images/africa.jpg" alt=""></div>
 		</div>
 		<div>
 			<h1>Your Dreams Await ...Turn Them Into Reality.</h1>
