--- a/BuckIt_Up/public/css/layout2.css
+++ b/BuckIt_Up/public/css/layout2.css
@@ -234,7 +234,7 @@ CONTENT
 }
 
 .panel-default h1 {
-	font-family: 'Poiret One', cursive;
+	font-family: 'Poiret One';
 	background-color: #ccc;
 	border-radius: 10px;
 	padding: 5px;
