added img to carousel

--- a/Template/index.html
+++ b/Template/index.html
@@ -33,6 +33,7 @@
 			<div><img src="images/auroraborealis.jpg" alt=""></div>
 			<div><img src="images/rio.jpg" alt=""></div>
 			<div><img src="images/greatwall.jpg" alt=""></div>
+			<div><img src="images/oregon.jpg" alt=""></div>
 			<div><img src="images/russia.jpg" alt=""></div>
 			<div><img src="images/africa.jpg" alt=""></div>
 		</div>
