--- a/BuckIt_Up/public/css/styles.css
+++ b/BuckIt_Up/public/css/styles.css
@@ -186,3 +186,59 @@ footer div {
 .fa-tumblr-square {
 	color: #56BC8A;
 }
+
+/****************************************************************
+FORMS
+*****************************************************************/
+
+.form-content {
+	font-family: "Roboto", Helvetica, Arial, sans-serif;
+	text-align: left;
+	border: 2px solid #ccc;
+	border-radius: 15px;
+	position: relative;
+	height: 420px;
+	width: 700px;
+	margin: 105px auto;
+}
+
+.panel-default {
+	color: #666;
+	width: 500px;
+	position: absolute;
+	top: 30px;
+	left: 50%;
+	margin-left:-36%;
+}
+
+.internal-content {
+	height: 500px;
+}
+
+.panel-default h1 {
+	font-family: 'Poiret One';
+	color: #000;
+	background-color: #ccc;
+	border-radius: 10px;
+	padding: 5px;
+	text-align: center;
+}
+
+.textbox {
+	width: 200px;
+}
+
+.form-group {
+	margin-top: 25px;
+}
+
+.left-form, .right-form {
+	padding-left: 32px;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.register {
+	text-align: center;
+	padding: 25px 0;
+}
