--- a/BuckIt_Up/public/css/styles.css
+++ b/BuckIt_Up/public/css/styles.css
@@ -105,11 +105,18 @@ HERO SECTION
 	text-align: center;
 }
 
-.hero button {
+.buttons a {
+	color: white;
+	text-decoration: none;
+	display: inline-block;
+}
+
+.buttons .signup, .login {
 	color: #FFF;
+	text-align: center;
 	font-size: 1em;
 	width: 105px;
-	padding: 15px 0;
+	padding: 15px;
 	border: none;
 	border-radius: 3px;
 	position: absolute;
