--- a/Template/index.html
+++ b/Template/index.html
@@ -22,8 +22,8 @@
 				<a class="main" href="#">Make List</a>
 				<a class="main" href="#">Find Ideas</a>
 				<a class="main" href="#">About</a>					
-				<a class="nav-login" href="/auth/login">Login</a>		
-				<a class="nav-signup" href="/auth/register">Sign Up</a>		
+				<a class="nav-login" href="#">Login</a>		
+				<a class="nav-signup" href="#">Sign Up</a>		
 			</nav>
 		</header>		
 	</div>
