changed default carousel background color

--- a/BuckIt_Up/public/css/styles.css
+++ b/BuckIt_Up/public/css/styles.css
@@ -83,7 +83,7 @@ HERO SECTION
 *****************************************************************/
 
 .hero {
-	background-color: yellow;
+	background-color: #F4F4F4;
 	height: 545px;
 	width: 100%;
 	position: relative;
