--- a/BuckIt_Up/public/css/styles.css
+++ b/BuckIt_Up/public/css/styles.css
@@ -83,7 +83,7 @@ HERO SECTION
 *****************************************************************/
 
 .hero {
-	background-color: #F4F4F4;
+	background-color: yellow;
 	height: 545px;
 	width: 100%;
 	position: relative;
@@ -158,7 +158,6 @@ footer {
 	position: relative;
 	height: 100%;
 	width: 100%;
-
 }
 
 footer div {
