added margins to form input fields

--- a/BuckIt_Up/public/css/styles.css
+++ b/BuckIt_Up/public/css/styles.css
@@ -194,7 +194,7 @@ footer div {
 }
 
 /****************************************************************
-FORMS
+FORMS and internal pgs.
 *****************************************************************/
 
 
@@ -239,6 +239,7 @@ FORMS
 
 .textbox {
 	width: 200px;
+	margin: 5px 0;
 }
 
 .form-group {
