styled inspiring quote on home page

--- a/BuckIt_Up/public/css/styles.css
+++ b/BuckIt_Up/public/css/styles.css
@@ -139,10 +139,12 @@ HERO SECTION
 
 .inspire {
 	color: #FFF;
+	font-style: italic;
 	position: absolute;
 	bottom: 65px;
 	width: 100%;
 	text-align: center;	
+	text-shadow: 2px 2px #000;
 }
 
 /****************************************************************
